# DarkELF

./: .gitignore  README.md  form_factor.py  pyproject.toml  setup.py
darkelf/: Migdal.py  __init__.py  absorption.py  dos.py  electron.py  epsilon.py  fnomega.py  fnomega_anisotropic.py  form_factor.py  multiphonon.py  multiphonon_anisotropic.py  multiphonon_generalized.py  multiphonon_spin_dependent.py  multiphonon_spin_independent.py  phonon.py  targets.py
data/: Untitled.ipynb
data/Al/: Al.yaml
data/Al2O3/: Al2O3.yaml  Al2O3_extraordinary.yaml
data/C/: C.yaml
data/GaAs/: GaAs.yaml
data/GaN/: GaN.yaml
data/Ge/: Ge.yaml
data/Si/: Si.yaml  Si.yaml.save
data/SiC/: SiC.yaml
data/SiO2/: SiO2.yaml  SiO2_extraordinary.yaml
data/Ta/: Ta.yaml
data/Xe/: Xe.yaml
data/ZnS/: ZnS.yaml
examples/: darkelf_absorption.ipynb  darkelf_daily_modulation.ipynb  darkelf_electron.ipynb  darkelf_epsilon.ipynb  darkelf_migdal.ipynb  darkelf_migdal_tester.ipynb  darkelf_multiphonons.ipynb  darkelf_multiphonons_spin_dependent.ipynb  darkelf_multiphonons_spin_independent.ipynb  darkelf_multiphonons_test.ipynb  darkelf_phonon.ipynb  effective_charge.ipynb
examples/.ipynb_checkpoints/: darkelf_absorption-checkpoint.ipynb  darkelf_electron-checkpoint.ipynb  darkelf_epsilon-checkpoint.ipynb  darkelf_migdal-checkpoint.ipynb  darkelf_migdal_tester-checkpoint.ipynb  darkelf_phonon-checkpoint.ipynb
examples/data/: Al2O3_sigmalimit_phonopy_sph_nophase.txt  GaAs_sigmalimit_phonopy_sph_nophase.txt  Ge-handbook-nk.txt  R(0)_over_average_R_Ethresh_Al2O3.txt  Si-handbook-nk.txt  (+39 more)
